<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tarea Moviles</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="idDocente">Id Docente</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="opciones">Opciones:</string>
    <string name="title_activity_docente_menu">DocenteMenuActivity</string>
    <string name="title_activity_docente_insertar">DocenteInsertarActivity</string>
    <string name="title_activity_pregunta_insertar">PreguntaInsertarActivity</string>
    <string name="title_activity_pregunta_consultar">PreguntaConsultarActivity</string>
    <string name="title_activity_pregunta_eliminar">PreguntaEliminarActivity</string>
    <string name="title_activity_pregunta_actualizar">PreguntaActualizarActivity</string>
    <string name="title_activity_categoria_insertar">CategoriaInsertarActivity</string>
    <string name="title_activity_categoria_eliminar">CategoriaEliminarActivity</string>
    <string name="title_activity_categoria_consultar">CategoriaConsultarActivity</string>
    <string name="title_activity_categoria_actualizar">CategoriaActualizarActivity</string>
    <string name="title_activity_detalle_categoria_insertar">DetalleCategoriaInsertarActivity</string>
    <string name="title_activity_detalle_categoria_iactualizar">DetalleCategoriaIActualizarActivity</string>
    <string name="title_activity_detalle_categoria_consultar">DetalleCategoriaConsultarActivity</string>
    <string name="title_activity_detalle_categoria_eliminar">DetalleCategoriaEliminarActivity</string>
    <string name="title_activity_pregunta_menu">PreguntaMenuActivity</string>
    <string name="title_activity_categoria_menu">CategoriaMenuActivity</string>
    <string name="title_activity_detalle_categoria_menu">DetalleCategoriaMenuActivity</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="idPregunta">Id Pregunta</string>
    <string name="pregunta">Pregunta</string>
    <string name="idCategoria">Id Categoria</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="idEmail">Email</string>
    <string name="idPass">Password</string>
    <string name="idNombreDoc">Nombre</string>
    <string name="idApell1">Apellido Pri.</string>
    <string name="idApell2">Apellido Seg.</string>
    <string name="idFechaNac">Fecha Nac.</string>
    <string name="idTelefono">Telefono</string>
    <string name="idEstado">Activo</string>
    <string name="idCiclo">Id Ciclo</string>
    <string name="idAnio">Año</string>
    <string name="idNumero">Ciclo No.</string>
    <string name="idAsignatura">Id Asignatura</string>
    <string name="idNombre">Nombre</string>
    <string name="idCodigo">Código</string>
    <string name="idDescripcion">Descripción</string>
    <string name="idEstadoA">Estado</string>
    <string name="idAsignaCiclo">Id</string>
    <string name="title_activity_docente_consultar">DocenteConsultarActivity</string>
    <string name="title_activity_docente_actualizar">DocenteActualizarActivity</string>
    <string name="title_activity_docente_eliminar">DocenteEliminarActivity</string>
    <string name="title_activity_ciclo">CicloActivity</string>
    <string name="title_activity_ciclo_menu">CicloMenuActivity</string>
    <string name="title_activity_ciclo_insertar">CicloInsertarActivity</string>
    <string name="title_activity_ciclo_consultar">CicloConsultarActivity</string>
    <string name="title_activity_ciclo_actualizar">CicloActualizarActivity</string>
    <string name="title_activity_ciclo_eliminar">CicloEliminarActivity</string>
    <string name="title_activity_asignatura_menu">AsignaturaMenuActivity</string>
    <string name="title_activity_asignatura_insertar">AsignaturaInsertarActivity</string>
    <string name="title_activity_asignatura_consultar">AsignaturaConsultarActivity</string>
    <string name="title_activity_asignatura_actualizar">AsignaturaActualizarActivity</string>
    <string name="title_activity_asignatura_eliminar">AsignaturaEliminarActivity</string>
    <string name="title_activity_asignacion_ciclo_menu">AsignacionCicloMenuActivity</string>
    <string name="title_activity_asigna_ciclo_insertar">AsignaCicloInsertarActivity</string>
    <string name="title_activity_asigna_ciclo_consultar">AsignaCicloConsultarActivity</string>
    <string name="title_activity_asigna_ciclo_actualizar">AsignaCicloActualizarActivity</string>
    <string name="title_activity_asigna_ciclo_eliminar">AsignaCicloEliminarActivity</string>
    <string name="title_activity_alumno_menu">AlumnoMenuActivity</string>
    <string name="title_activity_alumno_insertar">AlumnoInsertarActivity</string>
    <string name="idAlumno">Id Alumno</string>
    <string name="id_categoria">Id Categoria</string>
    <string name="idrp">Id</string>
    <string name="idAsignapreg">Id</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="respuesta">Respuesta</string>
    <string name="idCuestionario">Id Cuestionario</string>
    <string name="numero">Numero</string>
    <string name="tipo">Tipo</string>
    <string name="title_activity_alumno_consultar">AlumnoConsultarActivity</string>
    <string name="title_activity_alumno_actualizar">AlumnoActualizarActivity</string>
    <string name="title_activity_alumno_eliminar">AlumnoEliminarActivity</string>
    <string name="title_activity_asignacion_pregunta_menu">AsignacionPreguntaMenuActivity</string>
    <string name="title_activity_asignapreg_insertar">AsignapregInsertarActivity</string>

</resources>
