<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/idAsignatura" />

        <EditText
            android:id="@+id/editIdAsignatura"
            android:inputType="number"
            android:maxLength="7" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow>

        <TextView android:text="@string/idNombre" />

        <EditText
            android:id="@+id/editIdNombre"
            android:inputType="text" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/idCodigo" />

        <EditText
            android:id="@+id/editIdCodigo"
            android:inputType="text" />
    </TableRow>
    
    <TableRow>

        <TextView android:text="@string/idDescripcion" />

        <EditText
            android:id="@+id/editIdDescripcion"
            android:inputType="text" />
    </TableRow>
    
    <TableRow>

        <TextView android:text="@string/idEstado" />

        <CheckBox
            android:id="@+id/editIdEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idEstado" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="actualizarAsignatura"
            android:text="@string/actualizar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>


</TableLayout>