<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/idAsignaCiclo" />

        <EditText
            android:id="@+id/editIdAsignaCiclo"
            android:inputType="number"
            android:maxLength="7" >

            <requestFocus />
        </EditText>
    </TableRow>
    
    <TableRow>

        <TextView android:text="@string/idAsignatura" />

        <EditText
            android:id="@+id/editIdAsignatura"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    
    <TableRow>

        <TextView android:text="@string/idDocente" />

        <EditText
            android:id="@+id/editIdDocente"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    
    <TableRow>

        <TextView android:text="@string/idCiclo" />

        <EditText
            android:id="@+id/editIdCiclo"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="actualizarAsignaCiclo"
            android:text="@string/actualizar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>


</TableLayout>