<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/idPregunta" />

        <EditText
            android:id="@+id/editIdpregunta"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/idCategoria" />

        <Spinner
            android:id="@+id/spinnerCategora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/pregunta" />

        <EditText
            android:id="@+id/editPregunta"
            android:ems="10"
            android:inputType="text"
            android:maxLength="30" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow>

        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="insertarPregunta"
            android:text="@string/insertar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>