<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/idCategoria" />
    </TableRow>

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow>

        <TextView android:text="@string/nombre" />

        <EditText
            android:id="@+id/editnombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/descripcion" />

        <EditText
            android:id="@+id/editdescripcion"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="actualizarCategoria"
            android:text="@string/actualizar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>