<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idCategoria" />

     <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="consultarDetalleCategoria"
            android:text="@string/consultar" />
        

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta" />

    <ExpandableListView
        android:id="@+id/expandableListPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ExpandableListView>

<!--     <EditText -->
<!--         android:id="@+id/editPregunta" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:cursorVisible="false" -->
<!--         android:enabled="false" -->
<!--         android:focusable="false" -->
<!--         android:focusableInTouchMode="false" -->
<!--         android:inputType="textEmailAddress" -->
<!--         android:longClickable="false" /> -->

   

</LinearLayout>